Made fix for invisible bars in omnibox; plzzz check on mediocre resolution to verify

--- a/app/styles/graph.css
+++ b/app/styles/graph.css
@@ -50,7 +50,6 @@ fill: #95a5a6;
 }
 
 rect.bar {
-  stroke-width: 1;
   stroke: white;
   fill: #95a5a6;
 }
